--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -15,7 +15,9 @@ const title = `Error 404`;
         </h2>
         <p class="text-3xl font-semibold md:text-3xl">Lost in the Internet Wilderness!</p>
         <p class="mt-4 mb-8 text-lg text-muted dark:text-slate-400">
-          Oh no! It seems like you've stumbled upon the digital equivalent of a black hole. My servers are scratching their heads, wondering where this page went. Fear not, brave internet traveler, for you are not alone in this quest for the missing link.
+          Oh no! It seems like you've stumbled upon the digital equivalent of a black hole. My servers are scratching
+          their heads, wondering where this page went. Fear not, brave internet traveler, for you are not alone in this
+          quest for the missing link.
         </p>
         <a rel="noopener noreferrer" href={getHomePermalink()} class="btn ml-4">Back to homepage</a>
       </div>
