--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,8 +13,8 @@ const key = fs.readFileSync('./public/pgp.txt', 'utf8');
   <ContactUs
     tagline="Contact"
     title='Drop me a <span class="text-accent dark:text-white highlight">message</span> today!'
-    subtitle='Click the icons below to contact me via your preferred method.<br>The address below works for both E-Mail and Microsoft Teams.<br> '
-    email='RENE@KARKKAINEN.NET'
+    subtitle="Click the icons below to contact me via your preferred method.<br>The address below works for both E-Mail and Microsoft Teams.<br> "
+    email="RENE@KARKKAINEN.NET"
     key={key}
     keyHeight="200px"
   />
