--- a/src/pages/pgp.astro
+++ b/src/pages/pgp.astro
@@ -15,9 +15,9 @@ const key = fs.readFileSync('./public/pgp.txt', 'utf8');
     tagline="INFORMATION SECURITY"
     title="PGP KEY"
     subtitle=""
-    email='Rene@Karkkainen.net'
-    fingerprint='EB36 C299 3D96 576B B332 07B0 8145 F35C 5B38 6A41'
+    email="Rene@Karkkainen.net"
+    fingerprint="EB36 C299 3D96 576B B332 07B0 8145 F35C 5B38 6A41"
     key={key}
     keyHeight="1550px"
-  />  
+  />
 </Layout>
