--- a/public/projects/open.css
+++ b/public/projects/open.css
@@ -1,195 +1,196 @@
 :root {
-    --rt-color-white: #fff;
-    --rt-color-white-sec: #838383;
-    --rt-color-dark: #0D0D0D;
-    --rt-color-dark-sec: #161616;
-    --rt-color-dark-third: #1E1E1E;
-    --rt-color-success: #8dc572;
-    --rt-color-error: #be6464;
-    --rt-color-warning: #f0ad4e;
-    --rt-color-info: #337ab7;
-    --rt-opacity: 0.9;
+  --rt-color-white: #fff;
+  --rt-color-white-sec: #838383;
+  --rt-color-dark: #0d0d0d;
+  --rt-color-dark-sec: #161616;
+  --rt-color-dark-third: #1e1e1e;
+  --rt-color-success: #8dc572;
+  --rt-color-error: #be6464;
+  --rt-color-warning: #f0ad4e;
+  --rt-color-info: #337ab7;
+  --rt-opacity: 0.9;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: var(--rt-color-dark);
-    color: var(--rt-color-white);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--rt-color-dark);
+  color: var(--rt-color-white);
 }
 
 .main-container {
-    padding-top: 50px;
-    margin: auto;
-    max-width: 1000px;
-    width: 80%;
-
+  padding-top: 50px;
+  margin: auto;
+  max-width: 1000px;
+  width: 80%;
 }
 
 .flex-container {
-    display: flex;
+  display: flex;
 }
 
 .content {
-    padding-right: 50px;
-    width: 70%;
-
+  padding-right: 50px;
+  width: 70%;
 }
 
 .info {
-    flex: 1;
-    padding-right: 50px;
+  flex: 1;
+  padding-right: 50px;
 }
 
 .image-container {
-    text-align: left;
+  text-align: left;
 }
 
 .main-image {
-    height: 300px;
-    width: 100%;
-    object-fit: contain;
+  height: 300px;
+  width: 100%;
+  object-fit: contain;
 }
 
-model-viewer { margin: auto; height: 300px; width: 100%;}
+model-viewer {
+  margin: auto;
+  height: 300px;
+  width: 100%;
+}
 
 .viewer {
-    background-color: #1e1e1e79;
-    max-height: 300px;
-    width: 100%;
-    border-radius: 10px;
+  background-color: #1e1e1e79;
+  max-height: 300px;
+  width: 100%;
+  border-radius: 10px;
 }
 
-
 .thumbnail {
-    width: 80px;
-    height: 60px;
-    margin: 5px;
-    object-fit: cover;
-    cursor: pointer;
-    border-radius: 5px;
+  width: 80px;
+  height: 60px;
+  margin: 5px;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .nav,
 a {
-    display: flex;
-    align-items: center;
-    padding: 0;
-    margin-bottom: 10px;
-    list-style: none;
-    text-decoration: none;
-    color: var(--rt-color-white-sec);
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin-bottom: 10px;
+  list-style: none;
+  text-decoration: none;
+  color: var(--rt-color-white-sec);
 }
 
 .description-container {
-    margin-bottom: 30px;
-    border-bottom: 1px solid #ccc;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #ccc;
 }
 
 header {
-    color: #fff;
-    padding: 20px 0;
+  color: #fff;
+  padding: 20px 0;
 }
 
 .nav-container {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-container li {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 
 .nav-container a {
-    text-decoration: none;
-    color: #fff;
+  text-decoration: none;
+  color: #fff;
 }
 
 .link,
 .tag {
-    margin-top: 10px;
-    border-radius: 10px;
-    background-color: var(--rt-color-dark-sec);
-    padding: 15px;
-    text-decoration: none;
-    cursor: pointer;
+  margin-top: 10px;
+  border-radius: 10px;
+  background-color: var(--rt-color-dark-sec);
+  padding: 15px;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* Mobile-first approach: Adjust styles for smaller screens */
 @media (max-width: 1200px) {
-    .main-container {
-        padding-top: 20px;
-        /* Adjust spacing */
-        width: 90%;
-        /* Increase width for smaller screens */
-    }
+  .main-container {
+    padding-top: 20px;
+    /* Adjust spacing */
+    width: 90%;
+    /* Increase width for smaller screens */
+  }
 
-    .flex-container {
-        flex-direction: column;
-        /* Stack elements vertically */
-    }
+  .flex-container {
+    flex-direction: column;
+    /* Stack elements vertically */
+  }
 
-    .content,
-    .info {
-        padding: 0;
-        margin: 0;
-        /* Remove unnecessary padding */
-        width: 100%;
-        /* Occupy full width */
-    }
+  .content,
+  .info {
+    padding: 0;
+    margin: 0;
+    /* Remove unnecessary padding */
+    width: 100%;
+    /* Occupy full width */
+  }
 
-    .main-image {
-        /* Adjust image height */
-        width: 100%;
-        /* Occupy full width */
-    }
+  .main-image {
+    /* Adjust image height */
+    width: 100%;
+    /* Occupy full width */
+  }
 
-    .thumbnail {
-        width: 60px;
-        /* Adjust thumbnail size */
-        height: 40px;
-        margin: 5px;
-        border-radius: 5px;
-    }
+  .thumbnail {
+    width: 60px;
+    /* Adjust thumbnail size */
+    height: 40px;
+    margin: 5px;
+    border-radius: 5px;
+  }
 
-    .nav {
-        margin-bottom: 5px;
-        /* Reduce margin for compactness */
-    }
+  .nav {
+    margin-bottom: 5px;
+    /* Reduce margin for compactness */
+  }
 
-    .description-container {
-        margin-bottom: 20px;
-        /* Adjust margin */
-    }
+  .description-container {
+    margin-bottom: 20px;
+    /* Adjust margin */
+  }
 
-    header {
-        padding: 10px 0;
-        /* Reduce padding */
-    }
+  header {
+    padding: 10px 0;
+    /* Reduce padding */
+  }
 
-    .nav-container li {
-        margin: 0 10px;
-        /* Adjust margin */
-    }
+  .nav-container li {
+    margin: 0 10px;
+    /* Adjust margin */
+  }
 
-    .link,
-    .tag {
-        margin-top: 5px;
-        /* Reduce margin */
-        padding: 10px;
-        /* Adjust padding */
-    }
+  .link,
+  .tag {
+    margin-top: 5px;
+    /* Reduce margin */
+    padding: 10px;
+    /* Adjust padding */
+  }
 }
 
 footer {
-    color: var(--rt-color-white-sec);
-    margin: 20px;
+  color: var(--rt-color-white-sec);
+  margin: 20px;
 }
 
 footer a {
-    color: var(--rt-color-white-sec);
+  color: var(--rt-color-white-sec);
 }
