--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -74,12 +74,10 @@ const {
                 <span class="text-lg text-gray-800 underline underline-offset-4 dark:text-gray-200">Reveal PGP Key</span>
               </div>
             </div>
-            <div class="flex items-center">
-              <a class="text-xs underline" href="https://www.varonis.com/blog/pgp-encryption">What is a PGP Key?</a>
-              <Icon name={"tabler:external-link"} class="ml-1 w-3 h-3 text-gray-500"/>
+            <div class="flex">
+              <a class="text-xs underline" href="pgp.txt">Plain text PGP key</a>
+              <Icon name={"tabler:key"} class="ml-1 w-3 h-3 text-gray-500"/>
             </div>
-
-
           }
         </div>
       </>
