--- a/src/pages/certificates/index.astro
+++ b/src/pages/certificates/index.astro
@@ -20,7 +20,7 @@ const metadata = {
         <p id="result-counter">0 certificates</p>
       </div>
 
-      <div id="results-container" class="max-md:w-10/12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 p-6">
+      <div id="results-container" class="max-md:w-screen grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 p-6">
         <div
           class="rounded-lg bg-blue-50 transition-colors md:p-6 p-3 m-2 flex flex-col items-center text-center dark:bg-slate-900 dark:hover:bg-slate-800"
         >
