--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -75,7 +75,7 @@ const {
               </div>
             </div>
             <div class="flex">
-              <a class="text-xs underline" href="pgp.txt">Plain text PGP key</a>
+              <a class="text-xs underline" href="/pgp.txt">Plain text PGP key</a>
               <Icon name={"tabler:key"} class="ml-1 w-3 h-3 text-gray-500"/>
             </div>
           }
